# menu-editor

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  MIGRATION_PLAN.md  README.md  Untitled.ipynb  app.py  color-text-span.lua  conda-env.yml  config.yml  cookiecutter.json  db.py  dev.py  docker-compose.yml  main.py  makefile  mongo.ipynb  openai-assistants.ipynb  panel-test.py  parser.py  pyproject.toml  recipes.json  requirements.in  requirements.txt  roulette.ipynb  rxconfig.py  shopping.md  stats.ipynb
app/: Dockerfile  app.py  models.py  routes.py
docs/: api.md  modernization-plan.md
frontend/: index.html  jest.config.ts  package.json  setupTests.ts  tailwind.config.js  tsconfig.app.json
menus/: uge_01_2021.yaml  uge_01_2023.yaml  uge_02_2021.yaml  uge_02_2022.yaml  uge_02_2023.yaml  uge_02_2024.yaml  uge_03_2021.yaml  uge_03_2022.yaml  uge_03_2023.yaml  uge_03_2024.yaml  uge_04_2021.yaml  uge_04_2022.yaml  uge_04_2023.yaml  uge_05_2021.yaml  uge_05_2022.yaml  uge_05_2023.yaml  uge_06_2021.yaml  uge_07_2023.yaml  uge_08_2021.yaml  uge_08_2022.yaml  uge_08_2023.yaml  uge_09_2021.yaml  uge_09_2023.yaml  uge_10_2021.yaml  uge_10_2022.yaml  uge_10_2023.yaml  uge_11_2021.yaml  uge_11_2022.yaml  uge_11_2023.yaml  uge_12_2021.yaml  uge_12_2022.yaml  uge_12_2023.yaml  uge_13_2021.yaml  uge_13_2022.yaml  uge_13_2023.yaml  uge_14_2022.yaml  uge_14_2023.yaml  uge_15_2021.yaml  uge_15_2022.yaml  uge_16_2021.yaml  (+95 more)
recipes/: Gnocchi-sommersalat.yml  andebryst.yml  anders_and_kanelsnegle.yml  bananbrød.yml  bao-med-nakkekotelet.yml  bean_burritos.yml  bedstemor_ands_chokoladekage.yml  beluga-bolo.yml  blomkålssalat.yml  (+126 more)
(+57 files in other folders)
